2003-12-27 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Makefile: Allow custom profiler here.

2003-12-26 Ben Maurer  <bmaurer@users.sourceforge.net>

	* typemanager.cs (LookupType):
	  - Use a static char [], because split takes
	    a param array for args, so it was allocating
	    every time.
	  - Do not store true in a hashtable, it boxes.

2003-12-26 Ben Maurer  <bmaurer@users.sourceforge.net>

	* flowanalysis.cs: bytify common enums.

2003-12-25 Ben Maurer  <bmaurer@users.sourceforge.net>

	* modifiers.cs: Add a new set of flags for the
	flags allowed on explicit interface impls.
	* cs-parser.jay: catch the use of modifiers in
	interfaces correctly.
	* class.cs: catch private void IFoo.Blah ().

	All related to bug #50572.

2003-12-25 Ben Maurer  <bmaurer@users.sourceforge.net>

	* decl.cs: Rewrite the consistant accessability checking.
	Accessability is not linear, it must be implemented in
	a tableish way. Fixes #49704.

2003-12-25 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: Handle negation in a checked context.
	We must use subtraction from zero. Fixes #38674.

2003-12-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* class.cs: Ignore static void main in DLLs.
	* rootcontext.cs: Handle the target type here,
	since we are have to access it from class.cs
	* driver.cs: account for the above.

2003-12-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* report.cs: Give line numbers and files if available.

2003-12-20  Zoltan Varga  <vargaz@freemail.hu>

	* driver.cs: Implement /addmodule.

	* typemanager.cs:  Change 'modules' field so it now contains Modules not
	ModuleBuilders.

2003-12-20  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineMembers): Don't do the CS0649 check here.
	(FieldBase.IsAssigned): Removed this field.
	(FieldBase.SetAssigned): New public method.
	(TypeContainer.Emit): Make the CS0169/CS0649 checks actually work.

2003-12-20  Martin Baulig  <martin@ximian.com>
